--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,8 +4,8 @@ body {
 
 .button {
   cursor: pointer;
-  border: 1px solid bisque;
   background: cadetblue;
+  border: none;
   font-size: 20px;
   font-family: Roboto, Arial, sans-serif;
   width: 255px;
@@ -17,6 +17,7 @@ body {
   margin-bottom: 10px;
   display: inline-block;
   text-align: center;
+  margin-right: 10px;
   text-decoration: none;
   &:hover {
   	background-color: darken(cadetblue, 40%);
