--- a/sass/choose-verbs.scss
+++ b/sass/choose-verbs.scss
@@ -42,16 +42,19 @@
 .choose-verbs__section--two input:checked + label {
 	background: rgba(cadetblue, 0.15);
 }
-.choose-verbs__section--one .active, 
-.choose-verbs__section--two .active,
-.choose-verbs__section--three .active, 
-.choose-verbs__section--four .active {
+
+.choose-verbs__section .active {
 	&:hover {
 		border-color: lighten(green, 10%);
+	}
+	
+	border-color: green;
+}
+.choose-verbs__section .active label {
+	background: transparent;
+	&:hover {
 		background: transparent;
 	}
-	background: transparent;
-	border-color: green;
 }
 .choose-verbs label {
 	display: block;
