remove passed bg on hover

--- a/sass/choose-verbs.scss
+++ b/sass/choose-verbs.scss
@@ -50,7 +50,7 @@
 	
 	border-color: green;
 }
-.choose-verbs__section .active label {
+.choose-verbs__section .active label:hover {
 	background: transparent;
 	&:hover {
 		background: transparent;
