--- a/css/style.css
+++ b/css/style.css
@@ -178,17 +178,14 @@ body {
 .choose-verbs__section--two input:checked + label {
   background: rgba(95, 158, 160, 0.15); }
 
-.choose-verbs__section--one .active,
-.choose-verbs__section--two .active,
-.choose-verbs__section--three .active,
-.choose-verbs__section--four .active {
-  background: transparent;
+.choose-verbs__section .active {
   border-color: green; }
-  .choose-verbs__section--one .active:hover,
-  .choose-verbs__section--two .active:hover,
-  .choose-verbs__section--three .active:hover,
-  .choose-verbs__section--four .active:hover {
-    border-color: #00b300;
+  .choose-verbs__section .active:hover {
+    border-color: #00b300; }
+
+.choose-verbs__section .active label:hover {
+  background: transparent; }
+  .choose-verbs__section .active label:hover:hover {
     background: transparent; }
 
 .choose-verbs label {
