--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,7 +49,7 @@ body {
 	display: none;
 }
 .container {
-	max-width: 1300px;
+	max-width: 900px;
 	width: 100%;
 	margin: 0 auto;
 	box-sizing: border-box;
@@ -65,4 +65,13 @@ body {
 	border-bottom-style: solid;
 	border-bottom-color: slategrey;
 	cursor: pointer;
+}
+.button-container {
+  margin: 10px 0;
+}
+.svg-src {
+  display: none;
+}
+.svg-src path {
+  fill: #fff;
 }
