--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ body {
     color: green; }
 
 .full-height-block__counter {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   padding: 20px;
