--- a/sass/results.scss
+++ b/sass/results.scss
@@ -39,7 +39,9 @@
 }
 
 .results__home {
-  text-align: right;
+    text-align: right;
+    position: fixed;
+    right: 0;
 }
 .results__home a {
   font-size: 20px;
