z-index for main nav

--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,8 @@ body {
 .main-nav {
   color: #ffffff;
   background: #000;
-  position: fixed; }
+  position: fixed;
+  z-index: 2; }
 
 .main-nav__item {
   display: inline-block;
