--- a/css/style.css
+++ b/css/style.css
@@ -223,12 +223,16 @@ body {
   .choose-verbs__section--three fieldset:hover {
     border-color: #ffcd91; }
 
-.choose-verbs > div {
+.choose-verbs__wrapper > div {
   display: flex;
   flex-wrap: wrap; }
 
 .choose-verbs {
   padding-top: 40px; }
+
+.choose-verbs__wrapper {
+  height: calc(100vh - 230px);
+  overflow-y: scroll; }
 
 .full-height-block {
   min-height: 100vh;
