--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
   display: none; }
 
 .container {
-  max-width: 900px;
+  max-width: calc(100% - 500px);
   width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
@@ -104,6 +104,26 @@ body {
 
 .svg-src path {
   fill: #fff; }
+
+.button-container--fixed {
+  width: 250px;
+  right: 0;
+  bottom: 0;
+  position: fixed; }
+  .button-container--fixed .button {
+    margin-right: 0;
+    width: 240px; }
+  .button-container--fixed.bottom {
+    bottom: 100px; }
+
+@media (max-width: 1200px) {
+  .button-container--fixed {
+    width: 200px; }
+    .button-container--fixed .button {
+      width: 190px; }
+  .container {
+    max-width: calc(100% - 200px);
+    margin: 0; } }
 
 .study {
   min-height: 100vh;
@@ -223,16 +243,13 @@ body {
   .choose-verbs__section--three fieldset:hover {
     border-color: #ffcd91; }
 
-.choose-verbs__wrapper > div {
+.choose-verbs > div {
   display: flex;
   flex-wrap: wrap; }
 
 .choose-verbs {
-  padding-top: 40px; }
-
-.choose-verbs__wrapper {
-  height: calc(100vh - 230px);
-  overflow-y: scroll; }
+  padding-top: 40px;
+  padding-bottom: 40px; }
 
 .full-height-block {
   min-height: 100vh;
