--- a/sass/choose-verbs.scss
+++ b/sass/choose-verbs.scss
@@ -89,15 +89,12 @@
 	}
 }
 
-.choose-verbs__wrapper > div {
+.choose-verbs > div {
 	display: flex;
 	flex-wrap: wrap;
 }
 
 .choose-verbs {
     padding-top: 40px;
-}
-.choose-verbs__wrapper {
-    height: calc(100vh - 230px);
-    overflow-y: scroll;
+    padding-bottom: 40px;
 }
