--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,7 +49,7 @@ body {
 	display: none;
 }
 .container {
-	max-width: calc(100% - 500px);
+	max-width: 900px;
 	width: 100%;
 	margin: 0 auto;
 	box-sizing: border-box;
@@ -75,29 +75,4 @@ body {
 .svg-src path {
   fill: #fff;
 }
-.button-container--fixed {
-  .button {
-    margin-right: 0;
-    width: 240px;
-  }
-  width: 250px;
-  right: 0;
-  bottom: 100px;
-  position: fixed;
-  &.bottom {
-    bottom: 100px;
-  }
-}
 
-@media (max-width: 1200px) {
-  .button-container--fixed {
-    width: 200px;
-    .button {
-      width: 190px;
-    }
-  }
-  .container {
-    max-width: calc(100% - 200px);
-    margin: 0;
-  }
-}
