--- a/css/style.css
+++ b/css/style.css
@@ -296,14 +296,17 @@ body {
   .full-height-block__counter.active {
     display: block; }
 
-@media (max-width: 479px) {
-  .full-height-block__btn-wrap {
-    text-align: center; }
-  .full-height-block__input {
-    max-width: 200px; }
-  .full-height-block__counter {
-    top: 40px;
-    position: absolute; } }
+.mobile .full-height-block__counter {
+  position: relative;
+  top: 0;
+  text-align: right; }
+
+.mobile .full-height-block__btn-wrap {
+  text-align: center;
+  margin-top: 20px; }
+
+.mobile .full-height-block__input {
+  max-width: 200px; }
 
 .results__wrapper {
   max-width: 700px;
@@ -346,9 +349,8 @@ body {
   color: inherit;
   display: inline-block; }
 
-@media (max-width: 479px) {
-  .results__home {
-    display: none; } }
+.mobile .results__home {
+  display: none; }
 
 .main-footer {
   text-align: center;
@@ -405,6 +407,6 @@ body {
   text-decoration: none;
   color: inherit; }
 
-@media (max-width: 479px) {
-  .main-nav {
-    width: 100%; } }
+.mobile .main-nav {
+  width: 100%;
+  position: relative; }
