--- a/sass/full-height-block.scss
+++ b/sass/full-height-block.scss
@@ -65,16 +65,20 @@
     display: block;
   }
 }
-@media (max-width: 479px) {
+
+
+.mobile {
+  .full-height-block__counter {
+    position: relative;
+    top: 0;
+    text-align: right;
+  }
   .full-height-block__btn-wrap {
     text-align: center;
+    margin-top: 20px;
   }
   .full-height-block__input {
     max-width: 200px;
   }
-  .full-height-block__counter {
-    top: 40px;
-    position: absolute;
-  }
-
 }
+
