--- a/sass/main-nav.scss
+++ b/sass/main-nav.scss
@@ -12,8 +12,8 @@
   text-decoration: none;
   color: inherit;
 }
-@media (max-width: 479px) {
-	.main-nav {
-    width: 100%;
-  }
+
+.mobile	.main-nav {
+  width: 100%;
+  position: relative;
 }
