--- a/sass/results.scss
+++ b/sass/results.scss
@@ -50,7 +50,7 @@
   color: inherit;
   display: inline-block;
 }
-@media (max-width: 479px) {
+.mobile {
   .results__home {
     display: none;
   }
