--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,9 @@ body {
 .mobile .full-height-block__content {
   margin-top: initial; }
 
+.mobile .full-height-block {
+  min-height: calc(100vh - 145px); }
+
 .results__wrapper {
   max-width: 700px;
   border: 1px solid #ccc;
